# holodekk

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  errors.rs  lib.rs  main.rs  pipes.rs  streams.rs
crates/holodekk/: Cargo.toml  build.rs
crates/holodekk-cli/: Cargo.toml
crates/holodekk-cli/src/: build.rs  errors.rs  lib.rs  main.rs
crates/holodekk-cli/src/runtime/: mod.rs  ruby.rs
crates/holodekk-common/: Cargo.toml
crates/holodekk-common/src/: config.rs  docker.rs  lib.rs
crates/holodekk-common/src/engines/: mod.rs
crates/holodekk-common/src/engines/docker/: build.rs  mod.rs  store.rs
crates/holodekk-common/src/errors/: mod.rs
crates/holodekk-common/src/platform/: mod.rs
crates/holodekk-common/src/process/: mod.rs
crates/holodekk-common/src/utils/: fs.rs
crates/holodekk-common/src/utils/servers/: mod.rs
crates/holodekk-core/: Cargo.toml  build.rs
crates/holodekk-core/proto/: applications.proto  subroutines.proto
crates/holodekk-core/src/: errors.rs  holodekk.rs  lib.rs  libsee.rs  logger.rs  pipes.rs  proto.rs  streams.rs
crates/holodekk-core/src/api/server/: mod.rs  projectors.rs
crates/holodekk-core/src/engine/: builder.rs  image.rs  images.rs  mod.rs  store.rs
crates/holodekk-core/src/engine/docker/: build.rs  builder.rs  entities.rs  image.rs  image_builder.rs  image_store.rs  mod.rs  service.rs  store.rs
crates/holodekk-core/src/entities/: application.rs  mod.rs  subroutine.rs
crates/holodekk-core/src/errors/: grpc.rs  holodekk.rs  mod.rs
crates/holodekk-core/src/holodekk/: mod.rs  subroutine.rs
crates/holodekk-core/src/projector/: builder.rs  mod.rs
crates/holodekk-core/src/projector/server/: handle.rs  mod.rs
crates/holodekk-core/src/repositories/: mod.rs
crates/holodekk-core/src/services/subroutines/: create.rs  mod.rs
crates/holodekk-core/src/subroutine/: entities.rs  mod.rs  service.rs
crates/holodekk-core/src/subroutine/executors/: local.rs  mod.rs
crates/holodekk-core/src/utils/: fs.rs  mod.rs  streams.rs
crates/holodekk-engine/: Cargo.toml
crates/holodekk-engine/src/: errors.rs  lib.rs
crates/holodekk-engine/src/docker/: build.rs  mod.rs  store.rs
crates/holodekk-projector/: Cargo.toml  build.rs
crates/holodekk-projector/proto/: admin.proto  projector.proto
crates/holodekk-projector/src/: builder.rs  client.rs  error.rs  errors.rs  lib.rs  projector.rs  proto.rs  server.rs  wrapper.rs
crates/holodekk-projector/src/admin/: mod.rs
crates/holodekk-projector/src/api/: client.rs  proto.rs  server.rs
crates/holodekk-projector/src/entities/: mod.rs
crates/holodekk-projector/src/server/: builder.rs  handle.rs  mod.rs  runtime.rs  server.rs
crates/holodekk-projector/src/server/services/: mod.rs
crates/holodekk-projector/src/services/: mod.rs
crates/holodekk-projector/src/services/subroutines/: create.rs  mod.rs
crates/holodekk-repository/: Cargo.toml
crates/holodekk-repository/src/: entities.rs  lib.rs
crates/holodekk-shim/: Cargo.toml
crates/holodekk-shim/src/: main.rs  runtime.rs
crates/holodekk-subroutine/: Cargo.toml
crates/holodekk-subroutine/src/: config.rs  logger.rs  main.rs  server.rs  signals.rs  streams.rs
crates/holodekk-utils/: Cargo.toml
crates/holodekk-utils/src/: api_server.rs  lib.rs  libsee.rs  signals.rs
crates/holodekk-utils/src/server/: mod.rs  tonic.rs
crates/holodekk-utils/src/server/tonic/: builder.rs  handle.rs  manager.rs  mod.rs  server.rs  service.rs
crates/holodekk/proto/: common.proto  subroutine_definitions.proto  subroutines.proto  uhura.proto
crates/holodekk/src/: config.rs  enums.rs  holodekk.rs  lib.rs  projector.rs
crates/holodekk/src/apis/: mod.rs
crates/holodekk/src/apis/grpc/: mod.rs
crates/holodekk/src/apis/http/: mod.rs  routers.rs
crates/holodekk/src/clients/: mod.rs  uhura.rs
crates/holodekk/src/core/: api.rs  mod.rs  scene_create.rs  scene_delete.rs  scene_get.rs  scenes_find.rs  services.rs  subroutine_create.rs  subroutine_delete.rs  subroutine_get.rs  subroutines_find.rs
crates/holodekk/src/core/actions/: mod.rs  (+7 more)
crates/holodekk/src/engines/: errors.rs  mod.rs
crates/holodekk/src/entities/: fixtures.rs  id.rs  mod.rs  projector.rs  repository.rs  subroutine.rs
crates/holodekk/src/entity/: mod.rs  service.rs
crates/holodekk/src/errors/: grpc.rs  holodekk.rs  mod.rs
crates/holodekk/src/image/: mod.rs
crates/holodekk/src/images/: mod.rs
crates/holodekk/src/managers/: mod.rs  projector.rs
crates/holodekk/src/models/: mod.rs
crates/holodekk/src/process/: daemon.rs  mod.rs  pidfile.rs  syncpipe.rs
crates/holodekk/src/projector/: handle.rs  mod.rs
crates/holodekk/src/repositories/: mod.rs
crates/holodekk/src/scene/: mod.rs  monitor.rs
crates/holodekk/src/servers/: grpc.rs  http.rs  mod.rs  projector.rs  uhura.rs
crates/holodekk/src/services/: mod.rs  uhura.rs
crates/holodekk/src/subroutine/: mod.rs
crates/holodekk/src/subroutine_definitions/: get.rs
crates/holodekk/src/utils/: fs.rs  libsee.rs  logger.rs  mod.rs  signals.rs  streams.rs
crates/holodekkd/: Cargo.toml  build.rs
crates/holodekkd/proto/: subroutines.proto
crates/holodekkd/src/: api.rs  config.rs  docker.rs  errors.rs  holodekk.rs  lib.rs  main.rs  scene.rs  server.rs
crates/holodekkd/src/api/: errors.rs  fixtures.rs  mod.rs  server.rs  subroutines.rs
crates/holodekkd/src/engine/: docker.rs  mod.rs
crates/holodekkd/src/persistence/: mod.rs  models.rs  sqlite.rs
crates/holodekkd/src/projector/: handle.rs  mod.rs
crates/holodekkd/src/servers/: projector.rs
crates/holodekkd/src/subroutines/: api.rs  mod.rs  service.rs  store.rs
crates/uhura/: Cargo.toml  build.rs
crates/uhura/proto/: uhura.proto
crates/uhura/src/: client.rs  config.rs  entities.rs  lib.rs  main.rs  proto.rs  server.rs  service.rs  services.rs
crates/uhura/src/api/: client.rs  proto.rs  server.rs
crates/uhura/src/projector/: builder.rs  error.rs  mod.rs  server.rs
crates/uhura/src/services/: mod.rs
crates/uhura/tests/: api_integration.rs
uhura/: Cargo.toml
uhura/src/: main.rs
uhura/src/projector/: builder.rs  mod.rs
(+359 files in other folders)
