[workspace]
members = [
    "crates/holodekkd",
    "crates/holodekk-cli",
    "crates/holodekk-core",
    "crates/holodekk-engine",
    "crates/holodekk-projector",
    "crates/holodekk-repository",
    "crates/holodekk-subroutine",
    "crates/holodekk-utils",
    "crates/uhura"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://git.dubzland.net/holodekk/holodekk"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
holodekk = { path = "./crates/holodekk-core" }
holodekk-engine = { path = "./crates/holodekk-engine" }
holodekk-projector = { path = "./crates/holodekk-projector" }
holodekk-repository = { path = "./crates/holodekk-repository" }
holodekk-utils = { path = "./crates/holodekk-utils" }
uhura = { path = "./crates/uhura" }
async-trait = "0.1.67"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
futures-core = "0.3.28"
futures-util = "0.3.27"
log = "0.4.17"
mio = "0.8.6"
nix = "0.26.2"
prost = "0.11.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
syslog = "6.0.1"
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
tonic = "0.8.3"
tonic-build = "0.8.4"
tower = "0.4.13"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["v4"] }
