[workspace]
members = [
    "crates/holodekk",
    "crates/holodekkd",
    "crates/uhura"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://git.dubzland.net/holodekk/holodekk"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
holodekk = { path = "./crates/holodekk" }
timestamps = { git = "https://git.dubzland.net/holodekk/timestamps-rs.git" }
anyhow = "1.0.95"
axum = { version = "0.6.12", features = ["multipart"] }
async-trait = "0.1.85"
bytes = "1.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
http = "0.2.12"
hyper = "0.14.28"
lazy_static = "1.4.0"
log = "0.4.21"
mio = "0.8.11"
mockall = "0.12.1"
mockall_double = "0.3.1"
nix = "0.26.2"
prost = "0.11.8"
rand = "0.8.5"
regex = "1.11.1"
rstest = "0.17.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
syslog = "6.0.1"
tar = "0.4.40"
tempfile = "3.5.0"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tonic = "0.8.3"
tonic-build = "0.8.4"
tower = "0.4.13"
tracing = "0.1.40"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
walkdir = "2.3.3"
