[package]
name = "uhura"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# async-trait.workspace = true
clap.workspace = true
holodekk.workspace = true
holodekk-projector.workspace = true
log.workspace = true
mio.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
tokio.workspace = true
libc = "0.2.139"
# chrono = "0.4.24"
# thiserror.workspace = true
