[package]
name = "holodekk-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
holodekk.workspace = true
holodekk-engine.workspace = true
mio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1.67"
colored = "2.0.0"
flate2 = "1.0.25"
hyper = "0.14.24"
hyperlocal = "0.8.0"
tar = "0.4.38"

[[bin]]
name = "holodekk"
path = "src/main.rs"
doc = false
