[package]
name = "holodekk-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
holodekk.workspace = true
holodekkd.workspace = true
log.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
colored = "2.0.0"

[[bin]]
name = "holodekk"
path = "src/main.rs"
doc = false
