[package]
name = "holodekk"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
env_logger.workspace = true
holodekk-projector.workspace = true
log.workspace = true
serde.workspace = true
syslog.workspace = true
thiserror.workspace = true
uuid.workspace = true
axum = "0.6.12"
