[package]
name = "holodekk-engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
holodekk-utils.workspace = true
serde.workspace = true
thiserror.workspace = true
bollard = "0.14.0"
regex = "1.7.1"

[dev-dependencies]
tar.workspace = true
tokio.workspace = true
