[package]
name = "holodekk-projector"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
holodekk-engine.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tonic = "0.8.3"
prost = "0.11.8"
tokio-stream = { version = "0.1.12", features = ["net"] }
futures-core = "0.3.28"

[build-dependencies]
tonic-build = "0.8.4"
