[package]
name = "holodekk-projector"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
holodekk-engine.workspace = true
holodekk-utils.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
uuid.workspace = true
prost = "0.11.8"
futures-core = "0.3.28"

[build-dependencies]
tonic-build.workspace = true
