[package]
name = "holodekk-projector"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
holodekk-engine.workspace = true
holodekk-utils.workspace = true
log.workspace = true
nix.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
