[package]
name = "holodekk-repository"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# async-trait.workspace = true
# futures-util.workspace = true
holodekk-utils.workspace = true
# log.workspace = true
# nix.workspace = true
serde.workspace = true
# serde_json.workspace = true
thiserror.workspace = true
# tokio.workspace = true
uuid.workspace = true
# tonic = "0.8.3"
# prost = "0.11.8"
