[package]
name = "holodekk-shim"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
holodekk-core.workspace = true
libc = "0.2.139"
