[package]
name = "holodekk-subroutine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap.workspace = true
holodekk.workspace = true
holodekk-common.workspace = true
log.workspace = true
mio.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
chrono = "0.4.38"
