[package]
name = "holodekk-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
log.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc = "0.2.139"

[dev-dependencies]
clap.workspace = true
tempfile.workspace = true
