[package]
name = "holodekk"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hyper.workspace = true
log.workspace = true
mio.workspace = true
nix.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
bollard = { version = "0.14.0", features = ["ssl"] }
regex = "1.7.1"
libc = "0.2.139"
sha2 = "0.10.6"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
