[package]
name = "holodekk"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
# futures-core.workspace = true
futures-util.workspace = true
hex.workspace = true
hyper.workspace = true
lazy_static.workspace = true
log.workspace = true
mio.workspace = true
mockall_double.workspace = true
nix.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syslog.workspace = true
# tar.workspace = true
thiserror.workspace = true
timestamps.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
# tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
# url.workspace = true
# uuid.workspace = true
walkdir.workspace = true
# bollard = { version = "0.14.0", features = ["ssl"] }
# regex = "1.7.1"
libc = "0.2.169"
etcd-client = "0.12.4"
# hex = "0.4.3"
# rand = "0.8.5"
# anyhow = "1.0.70"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
# env_logger.workspace = true
http.workspace = true
mockall.workspace = true
mockall_double = "0.3.1"
rstest.workspace = true
tempfile.workspace = true
