[package]
name = "holodekkd"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
holodekk.workspace = true
serde.workspace = true
tokio.workspace = true
axum = "0.6.12"

[dev-dependencies]
tempfile = "3.4.0"
