[package]
name = "holodekkd"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
holodekk.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
uhura.workspace = true
uuid.workspace = true
axum = "0.6.12"

[dev-dependencies]
rstest.workspace = true
tempfile = "3.4.0"
