[package]
name = "uhura"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
futures-util.workspace = true
# holodekk-projector.workspace = true
# holodekk-utils.workspace = true
holodekk.workspace = true
log.workspace = true
mio.workspace = true
nix.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
env_logger.workspace = true
mockall.workspace = true
rstest.workspace = true
tempfile.workspace = true
